# tmp

./: .env  .env.example  .gitignore  pyproject.toml
kajima/: README.md  check_overlap.py  collect_labels.py  error_type_ratio.py  evaluate.py  extract_llm.py  low_precision_examples.py  parse_pdf.py  parse_xml.py  pipeline.py  schema.py  sheet_builder.py  summarize.py
tests/kajima/: test_review_fixes.py
vpn/: client.ovpn
